enumset_test_nightly/tests/compile-fail/mappings.stderr
error: #[enumset(map = "msb")] can only be used with an explicit integer repr.
 --> tests/compile-fail/mappings.rs:4:17
  |
4 | #[enumset(map = "msb")]
  |                 ^^^^^

error: `repr` is too small to contain this discriminant.
  --> tests/compile-fail/mappings.rs:12:14
   |
12 |     A, B, C, D = 64
   |              ^^^^^^

error: All variants must be a non-zero power of two.
  --> tests/compile-fail/mappings.rs:18:5
   |
18 |     A = 0x3,
   |     ^^^^^^^

error: `invalid_mask` is not a valid mapping.
  --> tests/compile-fail/mappings.rs:22:17
   |
22 | #[enumset(map = "invalid_mask")]
   |                 ^^^^^^^^^^^^^^
